# appit

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  private.rs  window.rs  xdg.rs
