[package]
name = "appit"
version = "0.2.0"
edition = "2021"
description = "A math library specialized for 2d screen graphics."
repository = "https://github.com/khonsulabs/appit"
license = "MIT OR Apache-2.0"
keywords = ["windowing", "winit"]
categories = ["gui"]
readme = "./README.md"

[features]
default = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]
wayland-csd-adwaita = ["winit/wayland-csd-adwaita"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]
rwh_06 = ["winit/rwh_06"]
rwh_05 = ["winit/rwh_05"]


[dependencies]
winit = { version = "0.29.3", default-features = false }
